<resources>
    <string name="app_name">InsuranceCalculator</string>
    <string name="title">Insurance Premium Calculator</string>
    <string name="agetxt">Age: </string>
    <string name="gendertxt">Gender: </string>
    <string name="smokertxt">Smoker: </string>
    <string name="totaltxt">Total Premium: </string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="yes">Yes</string>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>





    <string-array name="AgeRange">
        <item>Less than 17</item>
        <item>17 - 25</item>
        <item>26 - 30</item>
        <item>31 - 40</item>
        <item>41 - 55</item>
        <item>More than 55</item>
    </string-array>

</resources>
